# unified-eval

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: strict_normalizer_v1.json
docs/: ARCHITECTURE.md  DEE Evaluation Protocol Final.md  FREEZE_REPORT.md  PROTOCOL_COMPLIANCE_MATRIX.md  PROTOCOL_COMPLIANCE_PLAN.md  RELEASE_MANIFEST_v0.9.0-rc1.md  RELEASE_MANIFEST_v1.0.0.md
examples/predictions/: chfinann_dev_toy.jsonl
scripts/: README.md  copy_data_snapshot.py  generate_release_golden.py  run_all_checks.sh  verify_data_snapshot.py
src/unified_eval/: __init__.py  contracts.py  data_snapshot.py  io.py  matching.py  normalization.py  protocol_v1.py  reporting.py  schema.py  scoring.py  validation.py
tests/: test_data_snapshot.py  test_release_artifacts.py  test_run_all_checks_script.py  test_smoke.py
tests/protocol_v1/: protocol_case_helpers.py  test_contracts.py  test_protocol_v1_cli.py  test_t01_gold_vs_gold.py  test_t01_t05_t11_t15_scoring.py  test_t02_empty_prediction.py  test_t03_empty_gold.py  test_t04_empty_both.py  test_t05_wrong_event_type.py  test_t06_illegal_event_type.py  test_t07_illegal_role.py  test_t08_invalid_json_line.py  test_t09_invalid_record.py  test_t10_invalid_value_type.py  test_t11_duplicate_prediction.py  test_t12_partial_record.py  test_t13_wrong_role_value.py  test_t14_multi_value_order.py  test_t15_multi_value_partial_overlap.py  test_t16_multiple_same_type_records.py  test_t16_t18_matching.py  test_t17_greedy_vs_hungarian_difference.py  test_t18_zero_score_pair.py  (+19 more)
(+24 files in other folders)
