[project]
name = "unified-eval"
version = "1.0.0"
description = "Protocol-first scaffold for unified document-level event extraction evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unified_eval"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["configs/*.json"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
